replicas del backend

--- a/K8S/full_stack.yaml
+++ b/K8S/full_stack.yaml
@@ -60,7 +60,7 @@ kind: Deployment
 metadata:
   name: backend
 spec:
-  replicas: 3  # <--- AQUÍ ESTÁN TUS 3 PODS PARA PROBAR ESCALADO
+  # replicas: 3  # <--- AQUÍ ESTÁN TUS 3 PODS PARA PROBAR ESCALADO
   selector:
     matchLabels:
       app: backend
