--- a/K8S/full_stack.yaml
+++ b/K8S/full_stack.yaml
@@ -4,9 +4,9 @@ kind: ConfigMap
 metadata:
   name: db-config
 data:
-  POSTGRES_DB: sticct
-  POSTGRES_USER: postgres
-  DB_HOST: postgres-service # El backend usará este nombre para conectarse
+   DB_HOST: postgres-service # El backend usará este nombre para conectarse
+   POSTGRES_DB: sticct
+   POSTGRES_USER: postgres
 ---  
 # --- SECRETO DE LA DB ---
 apiVersion: v1
@@ -18,6 +18,18 @@ stringData:
   # Definimos la contraseña explícitamente aquí
   POSTGRES_PASSWORD: "secret123!"
 ---  
+# --- SOLICITUD DE VOLUMEN (PVC) ---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgres-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce   # Solo un pod puede escribir a la vez (típico para DB)
+  resources:
+    requests:
+      storage: 1Gi    # Pedimos 1 Gigabyte de espacio
+--- 
 # --- 2. POSTGRES (Deployment + Service) ---
 apiVersion: apps/v1
 kind: Deployment
@@ -43,7 +55,19 @@ spec:
                 name: db-secret
           ports:
             - containerPort: 5432
+            # --- AGREGA ESTO PARA NO PERDER DATOS ---
+          volumeMounts:
+            - mountPath: /var/lib/postgresql/data
+              name: postgres-storage
+          # ----------------------------------------
+
+      # --- DEFINICIÓN DEL VOLUMEN ---
+      volumes:
+        - name: postgres-storage
+          persistentVolumeClaim:
+            claimName: postgres-pvc
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
